--- a/scss/components/_categories.scss
+++ b/scss/components/_categories.scss
@@ -1,26 +1,26 @@
 .categories {
-    width: 100%;
-    height: 200px;
+  width: 100%;
+  height: 200px;
 
-    &-h1 {
-      margin: 20px auto;
-      font-size: 30px;
-      letter-spacing: 2px;
+  &-h1 {
+    margin: 20px auto;
+    font-size: 30px;
+    letter-spacing: 2px;
 
-      width: 250px;
-      height: 30px;
-    }
+    width: 250px;
+    height: 30px;
+  }
 }
 
 .category-buttons {
-    width: 700px;
-    height: 300px;
+  width: 700px;
+  height: 300px;
 
-    margin: 0 auto;
+  margin: 0 auto;
 
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .category {
@@ -41,10 +41,10 @@
   box-shadow: 0 2px 10px rgba(66,66,66,0.9);
 
   &--1 {
-    background-image: url("images/cat1.png");
+    background-image: url("../images/cat1.png");
   }
   &--2 {
-    background-image: url("images/cat2.png");
+    background-image: url("../images/cat2.png");
   }
 
   &-name {
