--- a/scss/components/_general.scss
+++ b/scss/components/_general.scss
@@ -1,13 +1,13 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box
 }
 
 body {
-    background: lightgray;
+  background: $gray;
 
-    font-family: sans-serif;
-    font-size: 18px;
-    line-height: 1.6em;
+  font-family: sans-serif;
+  font-size: 18px;
+  line-height: 1.6em;
 }
