--- a/scss/components/_opening.scss
+++ b/scss/components/_opening.scss
@@ -1,10 +1,23 @@
 .green-worm-img {
-    width: 100%;
-    height: 500px;
+  position: relative;
+  width: 100%;
+  height: 500px;
 
-    background-image: url("images/green-worm.png");
-    background-position: center;
-    background-size: cover;
+  background-image: url("../images/green-worm.png");
+  background-position: center;
+  background-size: cover;
 
-    box-shadow: 0 2px 10px rgba(66,66,66,0.9)
+  // box-shadow: 0 2px 10px rgba(66,66,66,0.9);
+
+  &:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 20%;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 38px 76px 38px;
+    border-color: transparent transparent $gray transparent;
+  }
 }
