--- a/scss/utility/_variables.scss
+++ b/scss/utility/_variables.scss
@@ -2,6 +2,8 @@
 $link: rgb(66,66,66);
 $link-hover: rgb(43, 130, 165);
 
+$gray: #e1e1e1;
+
 
 // Easing
 $cubic: cubic-bezier(.25,.46,.45,.94);
@@ -9,8 +11,8 @@ $cubic: cubic-bezier(.25,.46,.45,.94);
 
 //  Z-Index - Value based (map)
 $z-layers: (
-  'elementX':              0,
-  'elementY':              1
+  'navbar':              1,
+  'elementY':              2
 );
 
 //  Use it
