--- a/scss/components/_categories.scss
+++ b/scss/components/_categories.scss
@@ -3,12 +3,15 @@
   height: 200px;
 
   &-h1 {
-    margin: 20px auto;
+    margin: 40px auto 20px;
     font-size: 30px;
     letter-spacing: 2px;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 1;
 
-    width: 250px;
-    height: 30px;
+    // width: 250px;
+    // height: 30px;
   }
 }
 
