--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,10 @@ body {
   height: 500px;
   background-image: url("../images/green-worm.png");
   background-position: center;
-  background-size: cover; }
+  background-size: cover;
+  /* NEW. yall gon have to make it responsive, on my screen its right above the little triangle creme made,
+  On yours it might be above the damn navbar or somethin smh */
+  /* NEW */ }
   .green-worm-img:before {
     content: '';
     position: absolute;
@@ -100,6 +103,15 @@ body {
     border-style: solid;
     border-width: 0 38px 76px 38px;
     border-color: transparent transparent #e1e1e1 transparent; }
+  .green-worm-img .moto-message {
+    position: absolute;
+    top: 300px;
+    left: 15%;
+    font-size: 34px;
+    line-height: 1.5em;
+    text-align: center; }
+    .green-worm-img .moto-message h1 {
+      border-bottom: 2px solid black; }
 
 .categories {
   width: 100%;
@@ -157,3 +169,34 @@ body {
     text-shadow: 0 0 10px black; }
   .category:hover {
     opacity: 0.8; }
+
+.quick-about {
+  width: 100%;
+  height: 220px;
+  background: #d4d4d4;
+  padding: 50px;
+  margin-top: 11em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -ms-flex-line-pack: center;
+  align-content: center; }
+  .quick-about .about-text {
+    width: 750px; }
+    .quick-about .about-text h1 {
+      font-size: 38px;
+      border-bottom: 2px solid rgba(66, 66, 66, 0.9);
+      width: 250px;
+      padding-bottom: 5px; }
+    .quick-about .about-text p {
+      font-size: 20px;
+      letter-spacing: 1px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+  .quick-about .about-smiley {
+    width: 140px;
+    height: 140px;
+    background-image: url("../images/smiley.png");
+    background-size: cover;
+    background-position: center; }
