--- a/scss/components/_opening.scss
+++ b/scss/components/_opening.scss
@@ -20,4 +20,21 @@
     border-width: 0 38px 76px 38px;
     border-color: transparent transparent $gray transparent;
   }
+
+  /* NEW. yall gon have to make it responsive, on my screen its right above the little triangle creme made,
+  On yours it might be above the damn navbar or somethin smh */
+  .moto-message {
+    position: absolute;
+    top: 300px;
+    left: 15%;
+    font-size: 34px;
+    line-height: 1.5em;
+    text-align: center;
+
+    h1 {
+      border-bottom: 2px solid black;
+    }
+  }
+
+  /* NEW */
 }
